Fix Tubie Popover
Changed the data-position to "bottom" that it keeps position top, even off screen.
Code for best fitting position bottom is still included but not perfect

--- a/app/css/womenStyle.css
+++ b/app/css/womenStyle.css
@@ -181,65 +181,7 @@ body{
     height: 100%;
     outline: none;
 }
-/*****Tubie Popover******/
-.popover {
-    max-width: 55vw !important;
-    min-width: 200px;
-    border-radius: 45%;
-    padding: 4em 5em;
-    font-size: calc(8px + .5vw);
-    margin-top: -5em;
-}
-@media only screen and (max-width:576px){
-    .popover{
-        font-size:calc(6px + .7vw);
-        max-width: 90vw !important;
-    }
-}
-.popover .popover-body{ 
-    font-size: 1.7em;
-    padding: 1em .5em;
-    color: #212529;
-}
-.popover .popover-header {
-    font-size: 1.8em;
-    text-align: center;
-    background-color: rgba(0,0,0,0) !important;
-    border-bottom: .1em solid #ebebeb;
-    margin: .1em 1em;
-}
-/*arrow*/       
-	.popover .arrow {
-        width: 2.5rem;
-        height: 6rem;
-        margin: 0rem 1rem;
-	}
-	.popover .arrow::before, .popover .arrow::after {
-	  position: absolute;
-	  display: block;
-	  content: "";
-	  border-color: transparent;
-	  border-style: solid;
-	}
-	.bs-popover-top, .bs-popover-auto[x-placement^="top"] {
-	  margin-bottom: 0.2rem;
-	}
-	.bs-popover-top .arrow, .bs-popover-auto[x-placement^="top"] .arrow {
-	  bottom: calc((.3rem + 1px) * -1);
-	}
-	.bs-popover-top .arrow::before, .bs-popover-auto[x-placement^="top"] .arrow::before,
-	.bs-popover-top .arrow::after,
-	.bs-popover-auto[x-placement^="top"] .arrow::after {
-	  border-width: 4rem 1rem 0;
-	}
-	.bs-popover-top .arrow::before, .bs-popover-auto[x-placement^="top"] .arrow::before {
-	  bottom: 0;
-	  border-top-color: rgba(0, 0, 0, 0);
-	}
-	.bs-popover-top .arrow::after,
-	.bs-popover-auto[x-placement^="top"] .arrow::after {
-	  border-top-color: #fff;
-	}
+
 /******** SlideShow*******/
 .slideshow-container{
     height: 100%;
